# non-parametric-ml

./: .gitignore  README.md  pyproject.toml
non_parametric_ml/: decorators.py  utils.py
non_parametric_ml/pytorch_tools/: losses.py
notebooks/: linear_quantiles.ipynb
scripts/: binarized_quantreg.py  lbfgs_pytorch.py  loss_visualization.py  nll_vs_xentropy.py
